--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:orientation="vertical"
     tools:context="com.zs.login.myvarioustest.MainActivity">
 
 
-    <com.zs.login.myvarioustest.view.RadarView
-        android:id="@+id/radarview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-
-    <com.zs.login.myvarioustest.view.AnimButton
-        android:id="@+id/btn"
-        android:layout_width="200dp"
+    <Button
+        android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_centerInParent="true"
+        android:text="动画按钮"
+        android:onClick="animButton"
+        android:layout_marginTop="10dp"
         />
 
-</RelativeLayout>
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:text="雷达效果"
+        android:onClick="radarView"
+        android:layout_marginTop="10dp"
+        />
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:text="心"
+        android:onClick="colorfullView"
+        android:layout_marginTop="10dp"
+        />
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:text="背景"
+        android:onClick="colorfullBackView"
+        android:layout_marginTop="10dp"
+        />
+
+
+</LinearLayout>
