--- a/app/src/main/res/layout/button_layout.xml
+++ b/app/src/main/res/layout/button_layout.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    >
+<com.zs.login.myvarioustest.view.ColorfulView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <com.zs.login.myvarioustest.view.AnimButton
-        android:id="@+id/btn"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_centerInParent="true"
-        />
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.zs.login.myvarioustest.view.AnimButton
+            android:id="@+id/btn"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
+
+</com.zs.login.myvarioustest.view.ColorfulView>
