--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="white">#ffffff</color>
+
+    <color name="tran_black">#00000000</color>
+
+    <color name="color_line">#dddddd</color>
+
+    <color name="defaultText">#333333</color>
+    <color name="hint_color">#666666</color>
+
+    <color name="background">#f1f1f1</color>
+
 </resources>
