--- a/app/src/main/res/layout/item_view_layout.xml
+++ b/app/src/main/res/layout/item_view_layout.xml
@@ -2,41 +2,55 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="@drawable/list_item_selector"
+    android:background="@drawable/selector_item_bg"
     >
+
+    <ImageView
+        android:id="@+id/iv_item_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="14dp"
+        android:layout_centerVertical="true"
+        android:visibility="visible"
+        />
     
     <TextView
         android:id="@+id/tv_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:textSize="@dimen/default_size"
-        android:textColor="@color/defaultText"
-        android:text="title"
-        android:paddingLeft="10dp"
+        android:textSize="15dp"
+        android:textColor="@color/font_gray"
+        android:text="我的"
+        android:layout_toRightOf="@+id/iv_item_icon"
+        android:layout_marginLeft="10dp"
         />
 
     <TextView
         android:id="@+id/tv_item_content"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:gravity="right"
+        android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/iv_more"
-        android:text="content"
-        android:textSize="@dimen/default_size"
-        android:textColor="@color/hint_color"
+        android:layout_toRightOf="@+id/tv_item_title"
+        android:maxLines="2"
+        android:text=""
+        android:textSize="15dp"
+        android:textColor="@color/font_black"
         />
 
     <ImageView
         android:id="@+id/iv_item_content"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_centerVertical="true"
+        android:scaleType="centerCrop"
         android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/iv_more"
-        android:src="@drawable/user_card_icon"
-
+        android:visibility="gone"
         />
 
     <ImageView
@@ -46,16 +60,16 @@
         android:src="@drawable/all_more"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="14dp"
         />
 
     <View
         android:id="@+id/line_item"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="1px"
         android:layout_alignParentBottom="true"
         android:background="@color/color_line"
-        android:paddingLeft="10dp"
+        android:layout_marginLeft="10dp"
         >
 
     </View>
