--- a/app/src/main/res/layout/item_view_layout.xml
+++ b/app/src/main/res/layout/item_view_layout.xml
@@ -31,15 +31,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:gravity="right"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_centerInParent="true"
         android:layout_toLeftOf="@+id/iv_more"
         android:layout_toRightOf="@+id/tv_item_title"
         android:maxLines="2"
+        android:hint=""
         android:text=""
         android:textSize="15dp"
         android:textColor="@color/font_black"
+        android:gravity="right"
+        android:imeOptions="actionNext"
         />
 
     <ImageView
