--- a/app/src/main/res/layout/web_view_layout.xml
+++ b/app/src/main/res/layout/web_view_layout.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <com.zs.login.myvarioustest.view.ItemView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:itemTitle="标题2"
+        app:hint="100"
+        app:content=""
+        app:contentColor="@color/colorPrimary"
+        app:contentSize="20dp"
+        android:layout_marginTop="10dp"
+        />
 
     <WebView
         android:id="@+id/web_view"
