--- a/app/src/main/res/layout/web_view_layout.xml
+++ b/app/src/main/res/layout/web_view_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.zs.login.myvarioustest.view.ItemView
+    <com.zs.login.various.view.ItemView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:itemTitle="标题2"
