--- a/app/src/main/res/layout/activity_count_down.xml
+++ b/app/src/main/res/layout/activity_count_down.xml
@@ -35,23 +35,23 @@
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
         app:isHideTimeBackground="true"
-        app:isShowDay="false"
+        app:isShowDay="true"
         app:isShowHour="true"
         app:isShowMinute="true"
         app:isShowSecond="true"
         app:isShowMillisecond="false"
-        app:timeTextColor="#000000"
-        app:timeTextSize="22sp"
-        app:isTimeTextBold="true"
-        app:suffixGravity="bottom"
-        app:suffixTextColor="#000000"
-        app:suffixTextSize="12sp"
+        app:timeTextColor="@color/white"
+        app:timeTextSize="12dp"
+        app:isTimeTextBold="false"
+        app:suffixTextColor="@color/white"
+        app:suffixTextSize="10dp"
         app:suffixDay="天"
         app:suffixHour="时"
         app:suffixMinute="分"
         app:suffixSecond="秒"
-        app:suffixMillisecond="毫秒" />
+        app:suffixMillisecond="毫秒"/>
 
     <com.zs.various.view.MyCountDownView
         android:id="@+id/count_down_view3"
@@ -62,6 +62,30 @@
         android:textColor="#000"
         android:text="00 : 00 : 00"
         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+
+        <TextView
+            android:id="@+id/tv_test1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1"
+            />
+
+        <TextView
+            android:id="@+id/tv_test2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="1"
+            />
+
+    </LinearLayout>
 
 
 </LinearLayout>
