--- a/app/src/main/res/layout/show_layout.xml
+++ b/app/src/main/res/layout/show_layout.xml
@@ -51,7 +51,7 @@
         android:background="#548AEA"
         android:gravity="center"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
