--- a/app/src/main/res/layout/colorfull_back_layout.xml
+++ b/app/src/main/res/layout/colorfull_back_layout.xml
@@ -8,12 +8,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:id="@+id/iv_show"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:background="#1976d2"
-            />
+            android:transitionName="@string/transition_image"/>
 
     </RelativeLayout>
 
