--- a/app/src/main/res/layout/colorfull_layout.xml
+++ b/app/src/main/res/layout/colorfull_layout.xml
@@ -6,10 +6,16 @@
     android:orientation="vertical">
 
     <com.zs.various.view.ColorfulView
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
+
+        <ImageView
+            android:id="@+id/iv_show"
+            android:layout_width="200dp"
+            android:layout_height="240dp"
+            android:layout_centerInParent="true"
+            />
 
     </com.zs.various.view.ColorfulView>
 
