--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -43,4 +43,13 @@
         <attr name="followTextColor" format="boolean"/>
     </declare-styleable>
 
+    <!--音乐播放-->
+    <declare-styleable name="MediaView">
+        <attr name="color" format="color"></attr>
+        <attr name="loca">
+            <enum name="center" value="0"></enum>
+            <enum name="bottom" value="1"></enum>
+        </attr>
+    </declare-styleable>
+
 </resources>
