--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -52,4 +52,18 @@
         </attr>
     </declare-styleable>
 
+    <!--圆形进度条-->
+    <declare-styleable name="RoundProgressBar">
+        <attr name="backColor" format="color|reference"/>
+        <attr name="frontColor" format="color|reference"/>
+        <attr name="textColor" format="color|reference"/>
+        <attr name="textSize" format="dimension" />
+        <attr name="borderWidth" format="dimension" />
+        <attr name="mode">
+            <enum name="STROKE" value="0" />
+            <enum name="STROKE_TEXT" value="1" />
+            <enum name="FILL" value="2"/>
+        </attr>
+    </declare-styleable>
+
 </resources>
