--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
 
     <dimen name="default_size">15dp</dimen>
 
+    <!--环形字体尺寸-->
+    <dimen name="round_progress_text_size">15sp</dimen>
+    <!--环形边框宽度-->
+    <dimen name="round_progress_border_width">5dp</dimen>
+
 </resources>
