--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,15 @@
     <color name="font_lightgray">#999999</color>
     // 字体 浅灰色
 
+    <color name="color_0">#5b52b5</color>
+    <color name="color_1">#6e5eda</color>
+    <color name="color_2">#7361ed</color>
+    <color name="color_3">#ff6b6b</color>
+    <color name="color_4">#ef3f3f</color>
+    <color name="color_5">#5389f7</color>
+    <color name="color_6">#ffab58</color>
+    <color name="color_7">#ff9758</color>
+
     <color name="gray">#999999</color>
     <color name="blue">#288dde</color>
     <color name="red">#FF3B00</color>
