--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -6,16 +6,21 @@
     android:layout_height="match_parent"
     tools:context="com.zs.various.activity.VideoActivity">
 
-    <FrameLayout
-        android:background="@color/black"
+    <cn.jzvd.JZVideoPlayerStandard
+        android:id="@+id/videoplayer"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_margin="16dp">
+        android:layout_height="200dp" />
 
-        <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
-            android:id="@+id/videoplayer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </FrameLayout>
+    <!--<FrameLayout-->
+        <!--android:background="@color/black"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="200dp"-->
+        <!--android:layout_margin="16dp">-->
+
+        <!--<fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard-->
+            <!--android:id="@+id/videoplayer"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"/>-->
+    <!--</FrameLayout>-->
 
 </RelativeLayout>
