--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -57,7 +57,7 @@
         <attr name="backColor" format="color|reference"/>
         <attr name="frontColor" format="color|reference"/>
         <attr name="textColor" format="color|reference"/>
-        <attr name="textSize" format="dimension" />
+        <attr name="textSize"/>
         <attr name="borderWidth" format="dimension" />
         <attr name="mode">
             <enum name="STROKE" value="0" />
@@ -65,6 +65,18 @@
             <enum name="FILL" value="2"/>
             <enum name="STROKE_IMAGE" value="3"/>
         </attr>
+    </declare-styleable>
+
+    <attr name="textSize" format="dimension"/>
+
+    <declare-styleable name="LoopView">
+        <attr name="lineColor" format="color"/>
+        <attr name="topBottomTextColor" format="color"/>
+        <attr name="centerTextColor" format="color"/>
+        <attr name="textSize"/>
+        <attr name="canLoop" format="boolean"/>
+        <attr name="initPosition" format="integer"/>
+        <attr name="drawItemCount" format="integer"/>
     </declare-styleable>
 
 </resources>
