--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,5 +40,10 @@
         <item name="android:windowIsTranslucent">true</item>
     </style>
 
+    <!--<style name="FadeInPopWin">-->
+        <!--<item name="android:backgroundDimEnabled">true</item>-->
+        <!--<item name="@android:windowEnterAnimation">@anim/pop_win_content_fade_in</item>-->
+        <!--<item name="@android:windowExitAnimation">@anim/pop_win_content_fade_out</item>-->
+    <!--</style>-->
 
 </resources>
