--- a/app/src/main/res/layout/layout_date_picker.xml
+++ b/app/src/main/res/layout/layout_date_picker.xml
@@ -43,7 +43,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="150dp"
             android:background="#F1F2F4"
             android:padding="3dp">
 
@@ -54,7 +54,7 @@
                 <com.zs.various.view.datepicker.LoopView
                     android:id="@+id/picker_year"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     app:textSize="25sp"
                     app:canLoop="false"/>
@@ -62,7 +62,7 @@
                 <com.zs.various.view.datepicker.LoopView
                     android:id="@+id/picker_month"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="1dp"
                     android:layout_weight="1"
                     app:textSize="25sp"
@@ -71,7 +71,7 @@
                 <com.zs.various.view.datepicker.LoopView
                     android:id="@+id/picker_day"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="1dp"
                     android:layout_weight="1"
                     app:textSize="25sp"
