--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -79,4 +79,9 @@
         <attr name="drawItemCount" format="integer"/>
     </declare-styleable>
 
+    <declare-styleable name="SwitchColorView">
+        <attr name="switchColor" format="color"/>
+        <attr name="switchImage" format="reference"/>
+    </declare-styleable>
+
 </resources>
