--- a/app/src/main/res/layout/activity_anim.xml
+++ b/app/src/main/res/layout/activity_anim.xml
@@ -111,4 +111,13 @@
 
     </LinearLayout>
 
+    <com.zs.various.view.MusicView3
+        android:id="@+id/widget_view4"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:padding="14dp"
+        android:background="@color/background"
+        app:color="@color/colorAccent"
+        android:layout_marginTop="20dp"/>
+
 </LinearLayout>
