--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -82,4 +82,29 @@
         <!--android:text="我的测试文字"-->
         <!--android:gravity="center"/>-->
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_below="@+id/btn_switch"
+        android:gravity="center_vertical"
+        android:background="@color/font_gray">
+
+
+        <com.zs.various.view.SwitchColorView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            app:switchColor="@color/color_0"
+            app:switchImage="@mipmap/ic_collect_img"/>
+
+        <com.zs.various.view.SwitchColorView
+            android:id="@+id/switch_view"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
+            app:switchColor="@color/color_6"
+            app:switchImage="@mipmap/ic_collect_img"/>
+
+    </LinearLayout>
+
 </RelativeLayout>
