--- a/app/src/main/res/layout/activity_anim.xml
+++ b/app/src/main/res/layout/activity_anim.xml
@@ -111,13 +111,32 @@
 
     </LinearLayout>
 
-    <com.zs.various.view.MusicView3
-        android:id="@+id/widget_view4"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:padding="14dp"
-        android:background="@color/background"
-        app:color="@color/colorAccent"
-        android:layout_marginTop="20dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
+
+        <com.zs.various.view.MusicView3
+            android:id="@+id/widget_view4"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:padding="14dp"
+            android:background="@color/background"
+            app:color="@color/colorAccent"
+            />
+
+        <com.zs.various.view.MusicView4
+            android:id="@+id/widget_view5"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:padding="14dp"
+            android:background="@color/background"
+            app:color="@color/colorAccent"
+            android:layout_marginLeft="20dp"/>
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
