--- a/app/src/main/res/layout/activity_reflex.xml
+++ b/app/src/main/res/layout/activity_reflex.xml
@@ -19,6 +19,19 @@
         android:layout_height="200dp"
         android:layout_alignParentBottom="true">
 
+
+
     </FrameLayout>
+
+    <RelativeLayout
+        android:layout_width="200dp"
+        android:layout_height="400dp"
+        android:background="@drawable/round_bg"
+        android:layout_centerInParent="true"
+        android:elevation="8dp">
+
+    </RelativeLayout>
+
+
 
 </RelativeLayout>
