--- a/app/src/main/res/layout/activity_sort_list.xml
+++ b/app/src/main/res/layout/activity_sort_list.xml
@@ -26,7 +26,7 @@
         </android.support.v7.widget.RecyclerView>
 
         <TextView
-            android:id="@+id/tv_letter"
+            android:id="@+id/tv_letter_show"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_centerInParent="true"
