--- a/app/src/main/res/layout/activity_sort_recycler.xml
+++ b/app/src/main/res/layout/activity_sort_recycler.xml
@@ -4,19 +4,33 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical" >
-    
-    <EditText 
-        android:id="@+id/ed_search"
+
+    <LinearLayout
+        android:id="@+id/ll_top_search"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/white"
-        android:hint="请输入关键字"
-        android:paddingLeft="16dp"/>
+        android:layout_height="56dp"
+        android:gravity="center"
+        android:background="@color/color_0">
+
+        <EditText
+            android:id="@+id/ed_search"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@drawable/radius_bg"
+            android:drawableLeft="@mipmap/iv_search_normal"
+            android:drawablePadding="4dp"
+            android:paddingLeft="4dp"
+            android:hint="请输入关键字"
+            android:textSize="14dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"/>
+
+    </LinearLayout>
 
     <com.zs.various.view.ContactRecyclerView
         android:id="@+id/contact_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/ed_search"/>
+        android:layout_below="@+id/ll_top_search"/>
 
 </RelativeLayout>
