--- a/app/src/main/res/layout/contact_list_layout.xml
+++ b/app/src/main/res/layout/contact_list_layout.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
+        android:id="@+id/rl_container_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true">
@@ -12,10 +13,15 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="@null"></android.support.v7.widget.RecyclerView>
+            android:divider="@null"/>
 
         <TextView
-            android:id="@+id/tv_letter"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            />
+
+        <TextView
+            android:id="@+id/tv_letter_show"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_centerInParent="true"
@@ -25,13 +31,17 @@
             android:textSize="40dp"
             android:visibility="gone" />
 
+        <include layout="@layout/item_letter_layout"/>
+
         <com.zs.various.view.SideBarView
             android:id="@+id/view_sidebar"
             android:layout_width="30dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp"></com.zs.various.view.SideBarView>
+            android:layout_marginTop="20dp">
+
+        </com.zs.various.view.SideBarView>
 
     </RelativeLayout>
 
