--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,7 +27,7 @@
     // 字体 浅灰色
 
     <color name="color_0">#5b52b5</color>
-    <color name="color_1">#6e5eda</color>
+    <color name="color_1">#52cc97</color>
     <color name="color_2">#7361ed</color>
     <color name="color_3">#ff6b6b</color>
     <color name="color_4">#ef3f3f</color>
