--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -12,18 +12,18 @@
         android:layout_height="match_parent"
         tools:openDrawer="left">
 
-        <FrameLayout
-            android:id="@+id/fragment_container"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent">
 
+        </android.support.constraint.ConstraintLayout>
 
         <LinearLayout
             android:layout_width="220dp"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
-            android:layout_gravity="left">
+            android:layout_gravity="left"
+            >
 
         </LinearLayout>
 
