--- a/app/src/main/res/layout/activity_constrain_layout.xml
+++ b/app/src/main/res/layout/activity_constrain_layout.xml
@@ -144,5 +144,11 @@
         app:layout_constraintRight_toRightOf="parent"
         />
 
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="400dp"/>
+
 
 </android.support.constraint.ConstraintLayout>
