--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,10 +40,8 @@
         <item name="android:windowIsTranslucent">true</item>
     </style>
 
-    <!--<style name="FadeInPopWin">-->
-        <!--<item name="android:backgroundDimEnabled">true</item>-->
-        <!--<item name="@android:windowEnterAnimation">@anim/pop_win_content_fade_in</item>-->
-        <!--<item name="@android:windowExitAnimation">@anim/pop_win_content_fade_out</item>-->
-    <!--</style>-->
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
