--- a/app/src/main/res/layout/activity_behavior.xml
+++ b/app/src/main/res/layout/activity_behavior.xml
@@ -15,7 +15,7 @@
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="450dp"
+            android:layout_height="350dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <ImageView
@@ -24,15 +24,17 @@
                 android:layout_height="300dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/large"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax"
+                />
 
             <FrameLayout
                 android:id="@+id/main_fl_title"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="130dp"
                 android:layout_gravity="bottom|center_horizontal"
-                android:background="@color/colorPrimary"
-                app:layout_collapseMode="parallax">
+                android:background="@color/colorAccent"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.3">
 
                 <LinearLayout
                     android:id="@+id/main_ll_title_container"
@@ -89,7 +91,7 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/main_tb_toolbar"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         app:layout_anchor="@id/main_fl_title"
@@ -99,10 +101,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal">
-
-            <!--<Space-->
-                <!--android:layout_width="@dimen/image_final_width"-->
-                <!--android:layout_height="@dimen/image_final_width" />-->
 
             <TextView
                 android:id="@+id/main_tv_toolbar_title"
