--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -85,10 +85,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_below="@+id/btn_switch"
+        android:layout_below="@+id/tv_border"
         android:gravity="center_vertical"
-        android:background="@color/font_gray">
-
+        android:layout_toRightOf="@+id/btn_switch"
+        >
 
         <com.zs.various.view.SwitchColorView
             android:layout_width="wrap_content"
@@ -106,5 +106,31 @@
             app:switchImage="@mipmap/ic_collect_img"/>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_below="@+id/btn_switch"
+        android:layout_marginTop="10dp">
+
+
+        <com.zs.various.view.RippleLinearLayout
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:background="@color/colorAccent">
+
+        </com.zs.various.view.RippleLinearLayout>
+
+        <com.zs.various.view.RippleTextView
+            android:id="@+id/tv_rip"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/color_0"/>
+
+    </LinearLayout>
+
+
 
 </RelativeLayout>
