--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -40,6 +40,7 @@
         <attr name="cornerRadius" format="dimension"/>
         <attr name="strokeColor" format="color"/>
         <attr name="contentBackColor" format="color"/>
+        <attr name="contentPressedColor" format="color"/>
         <attr name="followTextColor" format="boolean"/>
     </declare-styleable>
 
